/*
 * $Id: Changelog,v 1.52 2004/01/25 02:45:26 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-26 12:00 UTC-0300 Luiz Rafael Culik <culikr@brturbo.com>
  + src/combobox.prg
    class for combo boxes
  + source/xwt_gtk/xwt_gtk_combobox.c
    !combo box routines
  * src/xwt_api.c
    src/xwt_gtk/xwt_gtk.c
    src/xwt_gtk/xwt_gtk.h
    ! support for combo boxes
    + src/xwt_gtk/xwt_gtk_calendar.c
    ! minor ajusts
  * test/xwt_test.prg
    ! added test for calendar and combo box    
        
2004-01-25 00:40 UTC-0300 Luiz Rafael Culik <culikr@brturbo.com>
  + src/xwt_gtk/xwt_calendar.h
    src/xwt_gtk/xwt_calendar.c
    + Basic Calendar modal widget
  * src/xwt_api.c
    src/xwt_gtk/xwt_gtk.c
    src/xwt_gtk/xwt_gtk.h
    ! support for calendar widget
  + xwt_gtk_calendar.c
    ! calendar widget routined
  + include/xwt.ch
    include/xwt_api.h
    !added new properties required by calendar
    + src/calendar.prg
      * source code to calendar class
      please note this an change on progress  
              
2003-12-18 15:31 UTC+0100 Giancarlo Niccolai <antispam /at/
  * contrib/xwt/Rules.make
  * contrib/xwt/test/Makefile.linux
    ! Added the variable TARGETS that is able to build
      more than one sample in the test directory.
      Please, mingw users are warned to update
      Makefile.mingw accordingly

2003-12-14 10:22 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * makefile.bc
    * fixed typo

2003-11-28 15:16 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini@tin.it>
  * Rules.make
    ! added support to msys/mingw32
  * test/Makefile
    ! added support to msys/mingw32
    + test/Makefile.mingw32
    + test/Makefile.linux

2003-11-27 00:00 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * src/browse.prg
    ! hb_IsNum() is no longer supported; using hb_IsNumeric