@@ -1,5 +1,5 @@
 /*
- * $Id: Changelog,v 1.52 2004/01/25 02:45:26 lculik Exp $
+ * $Id: Changelog,v 1.53 2004/01/26 13:52:16 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-01-26 18:40 UTC-0300 Luiz Rafael Culik <culikr@brturbo.com>
+  * src/xwt_gtk/xwt_gtk_combobox.c
+    ! added signal to get text select on entry
+  ! include/xwtapi.h
+    ! minor fix to property
+  * src/xwt_api.c
+    src/xwt_gtk/xwt_gtk.c
+    src/xwt_gtk/xwt_gtk.h
+    ! support for combo box signal and get/set events 
 
 2004-01-26 12:00 UTC-0300 Luiz Rafael Culik <culikr@brturbo.com>
   + src/combobox.prg
